# POSKO_SEMESTRALKA

./: CMakeLists.txt
socket_server_src/: main.c
